# Clock

./: README.md
src/: CMakeLists.txt  ChangeState.h  Clock.cpp  ReadState.h  TaskRunner.h  types.h
src/Interfaces/: IData.hpp  IObserver.hpp  IState.hpp  ISubject.hpp
